[package]
name = "georust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "georust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ndarray = "0.15"
numpy = "0.20"
rayon = "1.8" # For parallelism
memmap2 = "0.9" # For large DEM handling
anyhow = "1.0"
